[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/arena_bg.png" type="Texture" id=1]
[ext_resource path="res://scenes/levels/Arena.gd" type="Script" id=2]
[ext_resource path="res://scenes/levels/TileMap.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/light_v2.png" type="Texture" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 256, 128, 0.561231, -120.665, -0.561231, 120.665, 128, 256, 0, 0, 0, 0, 256, 384, 0, 120.665, 0, -120.665, 384, 256, 0, 0, 0, 0, 256, 128 )
}

[sub_resource type="Curve2D" id=2]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 384, 256, -118.981, 0, 118.981, 0, 512, 384, 0, 0, 0, 0, 640, 256, 122.348, 0.561231, -122.348, -0.561231, 512, 128, 0, 0, 0, 0, 384, 256 )
}

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 256, 640, 0, 117.5, 0, -117.5, 128, 512, 0, 0, 0, 0, 256, 384, -1, -121, 1, 121, 384, 512, 0, 0, 0, 0, 256, 640 )
}

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 512, 384, -0.5, -119.5, 0.5, 119.5, 640, 512, 0, 0, 0, 0, 512, 640, -0.39685, 118.658, 0.39685, -118.658, 384, 512, 0, 0, 0, 0, 512, 384 )
}

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 384, 192, -0.629961, -185.208, 0.629961, 185.208, 576, 384, 0, 0, 0, 0, 384, 576, 0, 181.5, 0, -181.5, 192, 384, 0, 0, 0, 0, 384, 192 )
}

[sub_resource type="Curve2D" id=6]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 384, 128, 3.56762, -262.815, -3.56762, 262.815, 128, 384, -2.37841, 1.18921, 2.37841, -1.18921, 384, 640, -1.62611, 240.729, 1.62611, -240.729, 640, 384, 0, 0, 0, 0, 384, 128 )
}

[sub_resource type="Curve2D" id=7]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -128, -128, 0, 0, 0, 0, 896, -128, 0, 0, 0, 0, 896, 896, 0, 0, 0, 0, -128, 896, 0, 0, 0, 0, -128, -128 )
}

[sub_resource type="Animation" id=8]
length = 6.0
loop = true
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("EnemiesPath/PathFollow2D:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="Arena" type="Node2D" groups=[
"game_over",
"spawners",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.75, 0.75 )
z_index = -100
texture = ExtResource( 1 )
centered = false

[node name="TileMap" parent="." instance=ExtResource( 3 )]

[node name="PathPositions" type="Node" parent="."]

[node name="Path2D" type="Path2D" parent="PathPositions"]
visible = false
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="PathPositions/Path2D"]
position = Vector2( 256, 128 )
rotation = 3.0469

[node name="Path2D2" type="Path2D" parent="PathPositions"]
visible = false
curve = SubResource( 2 )

[node name="PathFollow2D" type="PathFollow2D" parent="PathPositions/Path2D2"]
position = Vector2( 384, 256 )
rotation = 1.46411

[node name="Path2D3" type="Path2D" parent="PathPositions"]
visible = false
curve = SubResource( 3 )

[node name="PathFollow2D" type="PathFollow2D" parent="PathPositions/Path2D3"]
position = Vector2( 256, 640 )
rotation = -3.02392

[node name="Path2D4" type="Path2D" parent="PathPositions"]
visible = false
curve = SubResource( 4 )

[node name="PathFollow2D" type="PathFollow2D" parent="PathPositions/Path2D4"]
position = Vector2( 512, 384 )
rotation = 0.103359

[node name="Path2D5" type="Path2D" parent="PathPositions"]
visible = false
curve = SubResource( 5 )

[node name="PathFollow2D" type="PathFollow2D" parent="PathPositions/Path2D5"]
position = Vector2( 384, 192 )
rotation = 0.0660293

[node name="EnemiesPath" type="Path2D" parent="."]
visible = false
curve = SubResource( 6 )

[node name="PathFollow2D" type="PathFollow2D" parent="EnemiesPath"]
position = Vector2( 384, 128 )
rotation = 3.14019

[node name="SpawnerPoints" type="Path2D" parent="."]
curve = SubResource( 7 )

[node name="PathFollow2D" type="PathFollow2D" parent="SpawnerPoints"]
position = Vector2( -128, -128 )
rotation = 3.88889e-06

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/run_enemies_path = SubResource( 8 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 384, 384 )
scale = Vector2( 0.875, 0.875 )
texture = ExtResource( 4 )
color = Color( 0.8, 0.709804, 0.423529, 1 )
energy = 1.5
mode = 2

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.219608, 0.219608, 0.219608, 1 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
